[package]
name = "atomic_loans"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.17"
bls12_381 = { version = "0.1.4", package = "irmaseal-curve", features = ["experimental"] }
anyhow = "1"
secp256kfun = {  version = "0.7", features = ["serde"] }
secp256k1-zkp = {version = "0.7.0" }
schnorr_fun = "0.7"
sha2 = "0.9"
rand = { version = "0.8" }
clap = { version = "4.0", features = ["derive"] }
ff = "0.12"
group = "0.12"
bincode = {  version = "2.0.0-rc.1", features = ["serde"] }
sigma_fun = { version = "0.4", features = ["serde"] }
rand_chacha = "0.3"
serde = { version = "1" }
subtle = "2.6.1"
rayon = "1.7"